Overflow fix :hammer:

--- a/src/components/Room/Chat/chat.module.css
+++ b/src/components/Room/Chat/chat.module.css
@@ -151,6 +151,7 @@
     width: 85%;
     margin-left: 5%;
     font-size: 14px;
+    overflow-wrap:break-word;
 }
 
 .message_type:hover {
