--- a/src/components/Room/Members/members.module.css
+++ b/src/components/Room/Members/members.module.css
@@ -21,6 +21,7 @@
     border-radius: 15px;
     box-shadow: 10px 10px 20px #0d0d0d,
     -10px -10px 20px #353535;
+    overflow-wrap: break-word;
 }
 
 .bubble {
