--- a/src/components/Room/PlayList/playlist.module.css
+++ b/src/components/Room/PlayList/playlist.module.css
@@ -151,6 +151,7 @@
 .details{
     flex-grow: 4;
     padding-left: 5px;
+    overflow: hidden;
 }
 
 .item_title{
